src/test/deca/context/invalid/created/rule3.32/affectwithoutdeclar.deca
// Résultat erreur:
//    Affectation à une variable non déclarée (règle 3.32)
//
// Description:
//    Tests de programme incorrect contextuellement (variable non déclarée dans l'affectation)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    void maMethode() {
        maVariable = 5;
    }
}
